--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <base href="/" />
 
-  <meta name="color-scheme" content="light dark" />
+  <meta name="color-scheme" content="light" />
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
@@ -21,6 +21,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://apis.google.com/js/api.js" async defer></script>
 </body>
 
 </html>
